--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>problem will never last</title>
+    <link rel="stylesheet" href="style/sliders.css">
 </head>
 <body>
     <div>
@@ -20,6 +21,10 @@
         <h3>problem will never list</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio mollitia doloribus hic tenetur ex necessitatibus iusto quam ut iure, cupiditate sequi rerum dolor non, ab quod illo? Incidunt, nam? Illo?</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio mollitia doloribus hic tenetur ex necessitatibus iusto quam ut iure, cupiditate sequi rerum dolor non, ab quod illo? Incidunt, nam? Illo?</p>
+    </div>
+    <div>
+        <img width="50%" src="images/1700853808205.jpg" alt="">
+        <img width="50%" src="images/1700853953265.jpg" alt="">
     </div>
     
 </body>
